--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,18 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.onLightYellow{
+    -webkit-box-shadow: 0px 0px 79px 0px rgba(255,255,0,1);
+    -moz-box-shadow: 0px 0px 79px 0px rgba(255,255,0,1);
+    box-shadow: 0px 0px 79px 0px rgba(255,255,0,1);
+}
+.onLightRed{
+    -webkit-box-shadow: 0px 0px 79px 0px rgba(179,6,6,1);
+    -moz-box-shadow: 0px 0px 79px 0px rgba(179,6,6,1);
+    box-shadow: 0px 0px 79px 0px rgba(179,6,6,1);
+}
+.onLightGreen{
+    -webkit-box-shadow: 0px 0px 79px 0px rgba(8,135,52,1);
+    -moz-box-shadow: 0px 0px 79px 0px rgba(8,135,52,1);
+    box-shadow: 0px 0px 79px 0px rgba(8,135,52,1);
+}
